--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,4 +4,4 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+Ups, this page does not exist. Take a cookie and go back to the (main page)[bwiesmayr.github.io]!
